- **Container Details Page**: Renamed "View Logs" to "Open Details", providing a dedicated space to view output and control the container.
- **Reactive UI**: Action buttons (Start, Stop, Restart) now automatically react to the container's running state.
- **Dynamic Keyboard Shortcuts**: Implemented configurable shortcuts (e.g., Ctrl+S, Ctrl+R) for all major actions via a new Settings menu.
- **Auto-Update Check**: The application now automatically checks for newer versions on GitHub during startup.
- **Configurable Auto-Refresh**: Added an option to toggle and customize the container list refresh interval.
- **Clickable Ports**: Container ports in the Details view are now clickable hyperlinks.
- **Better Keyboard Control**: The application now focuses the first container on startup for immediate keyboard navigation.

### Fixes & Quality
- **Improved Stability**: Resolved multiple potential memory leaks and null pointer issues (verified via SonarQube & SpotBugs).
- **Stream Reliability**: Fixed an issue where logs would stop updating after a container restart.
- **Code Quality**: Achieved a passing status on the local SonarQube Quality Gate.

## Installation

1. Ensure Java 22 or higher is installed
2. Run the application:
   - Windows: Double-click un.bat or run java -jar docker-wsl-manager.jar
   - Linux/Mac: Run java -jar docker-wsl-manager.jar

## System Requirements

- Java Runtime Environment (JRE) 22 or higher
- Windows 10/11 with WSL 2 (recommended)
- Docker Desktop or Docker daemon

## Files Included

- docker-wsl-manager.jar - Main application (standalone, all dependencies included)
- un.bat - Windows launcher script
- README.md - User documentation
- LICENSE - License information

## Build Information

- Version: 1.1.0
- Build Date: 2026-01-10 23:27:31
- Java Version: 22
- JavaFX Version: 25.0.1

## Support

For issues and feature requests, please visit the project repository.